# v2x-module-interface-example

./: CMakeLists.txt  README.md  nfiniity_cube_radio.pb.cc  nfiniity_cube_radio.pb.h  sample-rx.py  sample-tx.py  sample_rx.cpp  sample_tx.cpp
.devcontainer/: Dockerfile  devcontainer.json
